added media query

--- a/responsive-portfolio/index.html
+++ b/responsive-portfolio/index.html
@@ -16,7 +16,7 @@
         <header class="main-header">
             <div class="header-block">
                 <div class="header-up">
-                    <span class="header-logo"><img src="./assets/images/header-logo.svg" alt="header-logo">
+                    <span class="header-logo"><img src="./assets/images/header-logo.svg" alt="header-logo"></span>
                     <span class="header-text-1">Hidden Leaf Village</span>
                 </div>
                 <span class="header-text-2">Believe It! The Path of the Ninja Starts Here</span>
